use color orange

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<button class="pure-button lss-button lss-button-blue">press me</button>
 				<button class="pure-button lss-button lss-button-green">press me</button>
 				<button class="pure-button lss-button lss-button-red">press me</button>
-				<button class="pure-button lss-button lss-button-yellow">press me</button>
+				<button class="pure-button lss-button lss-button-orange">press me</button>
 				<button class="pure-button lss-button lss-button-black">press me</button>
 			</div>
 		</div>
